--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,11 @@
 }
 
 .dark {
-  --color-bg-primary: #111827;
+  /* --color-bg-primary: #111827;
   --color-bg-secondary: #1f2937;
   --color-text-primary: #f9fafb;
   --color-text-secondary: #9ca3af;
-  --color-border: #374151;
+  --color-border: #374151; */
 }
 
 body {
